test/conformance/kuttl/validate/patterns/compare-arrays/02-pass.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: role-pass.yaml
  shouldFail: false
