test/conformance/kuttl/validate/patterns/compare-arrays/03-fail.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: role-fail.yaml
  shouldFail: true
