test/conformance/kuttl/validate/patterns/compare-arrays/role-fail.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: fail
rules:
- apiGroups:
  - ""
  resources:
  - pods
  - configmaps
  verbs:
  - get
