test/conformance/kuttl/validate/patterns/compare-arrays/role-pass.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: pass
rules:
- apiGroups:
  - ""
  resources:
  - pods
  - persistentvolumeclaims
  verbs:
  - get
