test/conformance/kuttl/validate/patterns/compare-arrays/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: foo
spec: {}
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
